--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
     <!-- Recharts UMD -->
     <script crossorigin src="https://unpkg.com/recharts/umd/Recharts.min.js"></script>
 
-    <!-- Babel Standalone (para compilar JSX/TSX no navegador) -->
+    <!-- Babel Standalone (compila JSX/TSX no navegador) -->
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   </head>
   <body class="bg-emerald-50">
     <div id="root"></div>
 
-    <!-- Seu app React (TSX/JSX) compilado pelo Babel no navegador -->
+    <!-- Seu app React (JSX/TSX) compilado pelo Babel no navegador -->
     <script type="text/babel" src="./app.jsx" data-presets="env,react,typescript"></script>
   </body>
 </html>
