--- a/index.html
+++ b/index.html
@@ -8,20 +8,21 @@
     <!-- Tailwind via CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
 
-    <!-- React 18 + ReactDOM (UMD) -->
-    <script crossorigin src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
-    <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
+    <!-- React 18 + ReactDOM (UMD) – jsDelivr -->
+    <script crossorigin src="https://cdn.jsdelivr.net/npm/react@18/umd/react.production.min.js"></script>
+    <script crossorigin src="https://cdn.jsdelivr.net/npm/react-dom@18/umd/react-dom.production.min.js"></script>
 
-    <!-- Recharts UMD -->
-    <script crossorigin src="https://unpkg.com/recharts/umd/Recharts.min.js"></script>
+    <!-- Recharts UMD (versão 2.x estável) – jsDelivr -->
+    <script crossorigin src="https://cdn.jsdelivr.net/npm/recharts@2.12.7/umd/Recharts.min.js"></script>
 
-    <!-- Babel Standalone (compila JSX/TSX no navegador) -->
+    <!-- Babel Standalone (compila JSX no navegador) -->
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   </head>
   <body class="bg-emerald-50">
     <div id="root"></div>
 
-    <!-- Seu app React (JSX/TSX) compilado pelo Babel no navegador -->
-    <script type="text/babel" src="./app.jsx" data-presets="env,react,typescript"></script>
+    <!-- Seu app React (JSX) compilado pelo Babel no navegador -->
+    <!-- Não precisamos do preset TypeScript aqui -->
+    <script type="text/babel" src="./app.jsx" data-presets="env,react"></script>
   </body>
 </html>
