--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
     <script crossorigin src="https://cdn.jsdelivr.net/npm/react@18/umd/react.production.min.js"></script>
     <script crossorigin src="https://cdn.jsdelivr.net/npm/react-dom@18/umd/react-dom.production.min.js"></script>
 
-    <!-- Recharts UMD (versão 2.x estável) – jsDelivr -->
+    <!-- PropTypes (necessário pro bundle UMD do Recharts) -->
+    <script crossorigin src="https://cdn.jsdelivr.net/npm/prop-types@15.8.1/prop-types.min.js"></script>
+
+    <!-- Recharts UMD (fixado) – jsDelivr -->
     <script crossorigin src="https://cdn.jsdelivr.net/npm/recharts@2.12.7/umd/Recharts.min.js"></script>
 
     <!-- Babel Standalone (compila JSX no navegador) -->
@@ -21,8 +24,7 @@
   <body class="bg-emerald-50">
     <div id="root"></div>
 
-    <!-- Seu app React (JSX) compilado pelo Babel no navegador -->
-    <!-- Não precisamos do preset TypeScript aqui -->
+    <!-- App JSX (sem TypeScript, já que é .jsx) -->
     <script type="text/babel" src="./app.jsx" data-presets="env,react"></script>
   </body>
 </html>
