--- a/index.html
+++ b/index.html
@@ -15,17 +15,16 @@
     <!-- PropTypes (necessário para Recharts UMD) -->
     <script crossorigin src="https://cdn.jsdelivr.net/npm/prop-types@15.8.1/prop-types.min.js"></script>
 
-    <!-- Recharts UMD (versão estável 1.8.5 compatível com Babel Standalone) -->
+    <!-- Recharts UMD (1.8.5, estável com Babel Standalone) -->
     <script crossorigin src="https://cdn.jsdelivr.net/npm/recharts@1.8.5/umd/Recharts.min.js"></script>
 
-    <!-- Babel Standalone (compila JSX no navegador) -->
+    <!-- Babel Standalone -->
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   </head>
-
   <body class="bg-emerald-50">
     <div id="root"></div>
 
-    <!-- App React (compilado no navegador) -->
+    <!-- Carrega seu app JSX -->
     <script type="text/babel" src="./app.jsx" data-presets="env,react"></script>
   </body>
 </html>
