--- a/index.html
+++ b/index.html
@@ -12,19 +12,16 @@
     <script crossorigin src="https://cdn.jsdelivr.net/npm/react@18/umd/react.production.min.js"></script>
     <script crossorigin src="https://cdn.jsdelivr.net/npm/react-dom@18/umd/react-dom.production.min.js"></script>
 
-    <!-- PropTypes (necessário para Recharts UMD) -->
-    <script crossorigin src="https://cdn.jsdelivr.net/npm/prop-types@15.8.1/prop-types.min.js"></script>
+    <!-- Chart.js (UMD) -->
+    <script crossorigin src="https://cdn.jsdelivr.net/npm/chart.js@4.4.6/dist/chart.umd.min.js"></script>
 
-    <!-- Recharts UMD (1.8.5, estável com Babel Standalone) -->
-    <script crossorigin src="https://cdn.jsdelivr.net/npm/recharts@1.8.5/umd/Recharts.min.js"></script>
-
-    <!-- Babel Standalone -->
+    <!-- Babel Standalone para compilar JSX no navegador -->
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   </head>
   <body class="bg-emerald-50">
     <div id="root"></div>
 
-    <!-- Carrega seu app JSX -->
+    <!-- App React (JSX) -->
     <script type="text/babel" src="./app.jsx" data-presets="env,react"></script>
   </body>
 </html>
